2008-01-19
"Myword" 0.8

2008-01-16
"Myword" 0.7

2008-01-15
"Myword" 0.6

2008-01-14
"Myword" 0.5

2008-01-09
"Myword" 0.4

2008-01-08
"Myword" 0.3.0

2008-01-07
"Myword" 0.2.5

2008-01-06
"Myword" 0.2

2008-01-05
"Myword" 0.1

2008-01-04
"Myword" added the result function.

2008-01-02
"Myword" almost finished the FirstRecite function

2008-01-01
"Myword" added the readword function

2007-12-31
"Myword" added the ReciteRecord class

2007-12-30
"Myword" finished the ChooseBook function
2007-12-29
"Myword" added the BookList class

2007-12-27
"Myword" added the DictFile class

2007-12-23
Added the "Installer"

2007-12-22
Added the "addword"